[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/HUD/hud_coins.png" type="Texture" id=1]
[ext_resource path="res://GUI/heart1.tscn" type="PackedScene" id=2]
[ext_resource path="res://pixeleum-48.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/GUI.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0.0156863, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="GUI" type="CanvasLayer" groups=[
"GUI",
]]
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartsContainer" type="HBoxContainer" parent="Control"]
margin_left = 40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart1" parent="Control/HeartsContainer" instance=ExtResource( 2 )]

[node name="HeartsContainer2" type="HBoxContainer" parent="Control"]
margin_left = 934.507
margin_top = 21.6071
margin_right = 985.507
margin_bottom = 87.6071
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart2" type="TextureRect" parent="Control/HeartsContainer2"]
margin_right = 47.0
margin_bottom = 66.0
texture = ExtResource( 1 )

[node name="HeartsContainer3" type="HBoxContainer" parent="Control"]
margin_left = 896.281
margin_top = 10.2806
margin_right = 947.281
margin_bottom = 76.2806
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heart2" type="Label" parent="Control/HeartsContainer3"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "0"
